<resources>
	<string name="app_name">Products</string>
	<string name="action_settings">Settings</string>
	<string name="msg_image_selection_restriction">You cannot pick more than 5 images</string>
	<string name="msg_grant_permission"><![CDATA[Please grant permission for Camera & Gallery both.]]></string>
	<string name="text_images">Images</string>
	<string name="text_title">Title</string>
	<string name="text_description">Description</string>
	<string name="text_price">Price</string>
	<string name="text_discount">Discount</string>
	<string name="text_add">Add</string>
	<string name="msg_choose_your_option">Choose your option</string>
	<string name="msg_validate_name">Please enter name.</string>
	<string name="msg_validate_description">Please enter description.</string>
	<string name="msg_validate_price">Please enter price.</string>
	<string name="msg_validate_discount">Please enter discount.</string>

</resources>