<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.add.AddProductActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/Theme.ProductApp.AppBarOverlay"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:navigationIcon="@drawable/ic_back"
			app:popupTheme="@style/Theme.ProductApp.PopupOverlay"
			app:title="Add Product"
			app:titleCentered="true" />

	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/appBar">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/dim_16">

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/tvImage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_images"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/text_size_16"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/frmIv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvImage">

				<com.google.android.material.imageview.ShapeableImageView
					android:id="@+id/ivProduct"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginVertical="@dimen/dim_10"
					android:background="@color/purple_200"
					android:minWidth="@dimen/dim_60"
					android:minHeight="@dimen/dim_60"
					android:scaleType="center"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:shapeAppearance="@style/Rounded"
					app:srcCompat="@android:drawable/ic_input_add"
					app:tint="@color/black" />

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rvImageList"
					android:layout_width="match_parent"
					android:layout_height="@dimen/dim_60"
					android:layout_marginVertical="@dimen/dim_10"
					android:layout_marginStart="@dimen/dim_5"
					android:orientation="horizontal"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					tools:itemCount="5"
					tools:listitem="@layout/item_image" />

			</androidx.appcompat.widget.LinearLayoutCompat>

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/tvTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dim_20"
				android:text="@string/text_title"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/text_size_16"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/frmIv" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_outline_input"
				android:imeOptions="actionNext"
				android:inputType="text"
				android:maxLines="1"
				android:padding="@dimen/dim_10"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/tvDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dim_20"
				android:text="@string/text_description"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/text_size_16"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/etTitle" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_outline_input"
				android:imeOptions="actionNext"
				android:inputType="text"
				android:maxLines="2"
				android:padding="@dimen/dim_10"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

			<Space
				android:id="@+id/spaceTop"
				android:layout_width="match_parent"
				android:layout_height="@dimen/dim_20"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/etDescription" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/tvPrice"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_price"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/text_size_16"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/spaceTop" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etPrice"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dim_10"
				android:background="@drawable/shape_outline_input"
				android:imeOptions="actionNext"
				android:inputType="number"
				android:padding="@dimen/dim_10"
				app:layout_constraintEnd_toStartOf="@+id/etDiscount"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/tvDiscount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/dim_20"
				android:text="@string/text_discount"
				android:textColor="@android:color/darker_gray"
				android:textSize="@dimen/text_size_16"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/tvPrice"
				app:layout_constraintTop_toBottomOf="@+id/spaceTop" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etDiscount"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_outline_input"
				android:imeOptions="actionDone"
				android:inputType="numberDecimal"
				android:padding="@dimen/dim_10"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/tvDiscount"
				app:layout_constraintTop_toBottomOf="@+id/tvDiscount" />

			<Space
				android:id="@+id/spaceBottom"
				android:layout_width="match_parent"
				android:layout_height="@dimen/dim_40"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/etDiscount" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btnAdd"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:insetTop="0dp"
				android:insetBottom="0dp"
				android:text="@string/text_add"
				android:textAllCaps="false"
				app:cornerRadius="@dimen/dim_20"
				app:layout_constraintTop_toBottomOf="@+id/spaceBottom" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>